page builder added

--- a/src/index.css
+++ b/src/index.css
@@ -556,3 +556,21 @@ body {
 .animate-blob5 {
   animation: blob5 20s ease-in-out infinite;
 }
+
+@keyframes fade-in-out {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.animate-fade-in-out {
+  animation: fade-in-out 2.2s both;
+}
